<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.muratcan.placesearchmartitech.viewmodel.VMMarkerDetail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.detail.MarkerDetailFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">
            <ImageView
                android:id="@+id/photoo"
                app:loadPhoto="@{viewModel.markerData.icon}"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="@id/place_name"
                app:layout_constraintBottom_toBottomOf="@id/place_name"
                app:layout_constraintEnd_toStartOf="@id/place_name"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@{viewModel.markerData.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@{viewModel.markerData.ratingTotal}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/placeholder_user_rating_place"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RatingBar"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="@{viewModel.markerData.ratingBarValue}"
            android:stepSize="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/placeholder_address"
                android:text="@{viewModel.markerData.formatted_address}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/placeholder_lat"
                android:text="@{viewModel.markerData.geometry.location.formattedLat}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/placeholder_lng"
                android:text="@{viewModel.markerData.geometry.location.formattedLng}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/placeholder_opennow"
                android:text='@{viewModel.markerData.opening_hours.open_now?"yes":"false"}'/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>